librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_externalfileingestioninfo_table_properties(
        arg1: *const crocksdb_externalfileingestioninfo_t,
    ) -> *const crocksdb_table_properties_t;
}
extern "C" {
    pub fn crocksdb_writestallinfo_cf_name(
        arg1: *const crocksdb_writestallinfo_t,
        arg2: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_writestallinfo_cur(
        arg1: *const crocksdb_writestallinfo_t,
    ) -> *const crocksdb_writestallcondition_t;
}
extern "C" {
    pub fn crocksdb_writestallinfo_prev(
        arg1: *const crocksdb_writestallinfo_t,
    ) -> *const crocksdb_writestallcondition_t;
}
pub type on_flush_completed_cb = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut libc::c_void,
        arg2: *mut crocksdb_t,
        arg3: *const crocksdb_flushjobinfo_t,
    ),
>;
pub type on_compaction_completed_cb = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut libc::c_void,
        arg2: *mut crocksdb_t,
        arg3: *const crocksdb_compactionjobinfo_t,
    ),
>;
pub type on_external_file_ingested_cb = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut libc::c_void,
        arg2: *mut crocksdb_t,
        arg3: *const crocksdb_externalfileingestioninfo_t,
    ),
>;
pub type on_background_error_cb = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut libc::c_void,
        arg2: crocksdb_backgrounderrorreason_t,
        arg3: *mut crocksdb_status_ptr_t,
    ),
>;
pub type on_stall_conditions_changed_cb = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut libc::c_void, arg2: *const crocksdb_writestallinfo_t),
>;
extern "C" {
    pub fn crocksdb_eventlistener_create(
        state_: *mut libc::c_void,
        destructor_: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        on_flush_completed: on_flush_completed_cb,
        on_compaction_completed: on_compaction_completed_cb,
        on_external_file_ingested: on_external_file_ingested_cb,
        on_background_error: on_background_error_cb,
        on_stall_conditions_changed: on_stall_conditions_changed_cb,
    ) -> *mut crocksdb_eventlistener_t;
}
extern "C" {
    pub fn crocksdb_eventlistener_destroy(arg1: *mut crocksdb_eventlistener_t);
}
extern "C" {
    pub fn crocksdb_options_add_eventlistener(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_eventlistener_t,
    );
}
extern "C" {
    pub fn crocksdb_cuckoo_options_create() -> *mut crocksdb_cuckoo_table_options_t;
}
extern "C" {
    pub fn crocksdb_cuckoo_options_destroy(options: *mut crocksdb_cuckoo_table_options_t);
}
extern "C" {
    pub fn crocksdb_cuckoo_options_set_hash_ratio(
        options: *mut crocksdb_cuckoo_table_options_t,
        v: f64,
    );
}
extern "C" {
    pub fn crocksdb_cuckoo_options_set_max_search_depth(
        options: *mut crocksdb_cuckoo_table_options_t,
        v: u32,
    );
}
extern "C" {
    pub fn crocksdb_cuckoo_options_set_cuckoo_block_size(
        options: *mut crocksdb_cuckoo_table_options_t,
        v: u32,
    );
}
extern "C" {
    pub fn crocksdb_cuckoo_options_set_identity_as_first_hash(
        options: *mut crocksdb_cuckoo_table_options_t,
        v: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_cuckoo_options_set_use_module_hash(
        options: *mut crocksdb_cuckoo_table_options_t,
        v: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_cuckoo_table_factory(
        opt: *mut crocksdb_options_t,
        table_options: *mut crocksdb_cuckoo_table_options_t,
    );
}
extern "C" {
    pub fn crocksdb_options_create() -> *mut crocksdb_options_t;
}
extern "C" {
    pub fn crocksdb_options_copy(arg1: *const crocksdb_options_t) -> *mut crocksdb_options_t;
}
extern "C" {
    pub fn crocksdb_options_destroy(arg1: *mut crocksdb_options_t);
}
extern "C" {
    pub fn crocksdb_column_family_descriptor_destroy(
        cf_desc: *mut crocksdb_column_family_descriptor,
    );
}
extern "C" {
    pub fn crocksdb_name_from_column_family_descriptor(
        cf_desc: *const crocksdb_column_family_descriptor,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_options_from_column_family_descriptor(
        cf_desc: *const crocksdb_column_family_descriptor,
    ) -> *mut crocksdb_options_t;
}
extern "C" {
    pub fn crocksdb_options_increase_parallelism(
        opt: *mut crocksdb_options_t,
        total_threads: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_optimize_for_point_lookup(
        opt: *mut crocksdb_options_t,
        block_cache_size_mb: u64,
    );
}
extern "C" {
    pub fn crocksdb_options_optimize_level_style_compaction(
        opt: *mut crocksdb_options_t,
        memtable_memory_budget: u64,
    );
}
extern "C" {
    pub fn crocksdb_options_optimize_universal_style_compaction(
        opt: *mut crocksdb_options_t,
        memtable_memory_budget: u64,
    );
}
extern "C" {
    pub fn crocksdb_options_set_compaction_filter(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_compactionfilter_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_compaction_filter_factory(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_compactionfilterfactory_t,
    );
}
extern "C" {
    pub fn crocksdb_options_compaction_readahead_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_comparator(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_comparator_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_merge_operator(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_mergeoperator_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_compression_per_level(
        opt: *mut crocksdb_options_t,
        level_values: *mut libc::c_int,
        num_levels: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_get_compression_level_number(opt: *mut crocksdb_options_t) -> usize;
}
extern "C" {
    pub fn crocksdb_options_get_compression_per_level(
        opt: *mut crocksdb_options_t,
        level_values: *mut libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_set_bottommost_compression(opt: *mut crocksdb_options_t, c: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_set_create_if_missing(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_create_missing_column_families(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_error_if_exists(arg1: *mut crocksdb_options_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_options_set_paranoid_checks(arg1: *mut crocksdb_options_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_options_set_env(arg1: *mut crocksdb_options_t, arg2: *mut crocksdb_env_t);
}
extern "C" {
    pub fn crocksdb_options_set_info_log(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_logger_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_info_log_level(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_set_write_buffer_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_db_write_buffer_size(arg1: *mut crocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_options_set_max_open_files(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_set_max_total_wal_size(opt: *mut crocksdb_options_t, n: u64);
}
extern "C" {
    pub fn crocksdb_options_set_compression_options(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
        arg3: libc::c_int,
        arg4: libc::c_int,
        arg5: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_use_direct_reads(opt: *mut crocksdb_options_t, v: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_options_set_use_direct_io_for_flush_and_compaction(
        opt: *mut crocksdb_options_t,
        v: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_prefix_extractor(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_slicetransform_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_memtable_insert_with_hint_prefix_extractor(
        arg1: *mut crocksdb_options_t,
        arg2: *mut crocksdb_slicetransform_t,
    );
}
extern "C" {
    pub fn crocksdb_options_set_num_levels(arg1: *mut crocksdb_options_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_options_get_num_levels(arg1: *mut crocksdb_options_t) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_options_set_level0_file_num_compaction_trigger(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_level0_slowdown_writes_trigger(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_get_level0_slowdown_writes_trigger(
        arg1: *mut crocksdb_options_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_options_set_level0_stop_writes_trigger(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_get_level0_stop_writes_trigger(
        arg1: *mut crocksdb_options_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_options_set_target_file_size_base(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_get_target_file_size_base(arg1: *const crocksdb_options_t) -> u64;
}
extern "C" {
    pub fn crocksdb_options_set_target_file_size_multiplier(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_options_set_max_bytes_for_level_base(arg1: *mut crocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn crocksdb_options_set_optimize_filters_for_hits(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_set_level_compaction_dynamic_level_bytes(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_options_get_level_compaction_dynamic_level_bytes(
        options: *const crocksdb_options_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_options_set_max_bytes_for_level_multiplier(
        arg1: *mut crocksdb_options_t,
        arg2: f64,
    );
}
extern "C" {
    pub fn crocksdb_options_get_max_bytes_for_level_multiplier(
        arg1: *mut crocksdb_options_t,
    ) -> f64;
}
extern "C" {
    pub fn crocksdb_options_set_max_bytes_for_level_multiplier_additional(
        arg1: *mut crocksdb_options_t,
        level_values: *mut libc::c_int,
        num_levels: usize,
    );
}
extern "C" {
    pub fn crocksdb_options_enable_statistics(arg1: *mut crocksdb_options_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_options_reset_statistics(arg1: *mut crocksdb_options_t);
}
extern "C" {
    pub fn crocksdb_load_latest_options(
        dbpath: *const libc::c_char,
        env: *mut crocksdb_env_t,
        db_options: *mut crocksdb_options_t,
        cf_descs: *mut *mut *mut crocksdb_column_family_descriptor,
        cf_descs_len: *mut usize,
        ignore_unknown_options: libc::c_uchar,
        errptr: *mut *mut libc::c_char,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_options_statistics_get_string(
        opt: *mut crocksdb_options_t,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_options_statistics_get_ticker_count(
        opt: *mut crocksdb_options_t,
        ticker_type: u32,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_options_statistics_get_and_reset_ticker_count(
        opt: *mut crocksdb_options_t,
        ticker_type: u32,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_options_statistics_get_histogram_string(
        opt: *mut crocksdb_options_t,
        type_: u32,
    ) -> *mut libc::c_char;
}
